<resources>
    <string name="app_name">DelayWise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bob Smith</string>
    <string name="nav_header_subtitle">bob.smith@xyz.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_flightinfo">Flight Info</string>
    <string name="menu_savedflights">Saved Flights</string>
    <string name="app_label">Home Search Bar</string>
    <string name="search_hint">ex. AA5555</string>

    <string name="departing_airport_abr">MUN</string>
    <string name="departing_airport_name">Munich Airport</string>
    <string name="departing_flight_time">10:00</string>
    <string name="departing_flight_date">Mon 21 Mar</string>

    <string name="arriving_airport_abr">BCN</string>
    <string name="arriving_airport_name">Barcelona Airport</string>
    <string name="arriving_flight_time">12:55</string>
    <string name="arriving_flight_date">Mon 21 Mar</string>

    <string name="flight_number_label">Flight Number:</string>
    <string name="airline_label">Airline:</string>
    <string name="departure_airport_label">Departure Airport:</string>
    <string name="average_delay_over_label">Average Delay Over:</string>

    <string name="flight_number">LH2656 (Barcelona)</string>
    <string name="departing_airport_name_2">Munich International Airport Franz Josef Strauss</string>
    <string name="average_delay_over">43% , 25 min</string>

    <string name="more_flights_from_airport_label">More flights from this airport:</string>

</resources>