<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cs446group18.delaywise.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_flightinfo"
        android:name="com.cs446group18.delaywise.ui.flightinfo.FlightInfoFragment"
        android:label="@string/menu_flightinfo"
        tools:layout="@layout/fragment_flightinfo" />

    <fragment
        android:id="@+id/nav_savedflights"
        android:name="com.cs446group18.delaywise.ui.savedflights.SavedFlightsFragment"
        android:label="@string/menu_savedflights"
        tools:layout="@layout/fragment_flightinfo" />
</navigation>